Extracting `FindCrmUser` cmdlet

--- a/Innofactor.Crm.CI.FindCrmUser/Innofactor.Crm.CI.FindCrmUser.csproj
+++ b/Innofactor.Crm.CI.FindCrmUser/Innofactor.Crm.CI.FindCrmUser.csproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2CE10812-D7D7-40F2-94E4-63A3E7E345AC}</ProjectGuid>
+    <ProjectGuid>{37B302D4-5C3B-4B80-BBE7-42D044BDAED8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cinteros.Crm.Utils.CI</RootNamespace>
-    <AssemblyName>Innofactor.Crm.CI</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <RootNamespace>Innofactor.Crm.CI.FindCrmUser</RootNamespace>
+    <AssemblyName>Innofactor.Crm.CI.FindCrmUser</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,37 +28,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Innofactor.Crm.CI.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Cinteros.Crm.Utils.Common, Version=9.0.1804.11, Culture=neutral, PublicKeyToken=0b6cd78ab2e51f2b, processorArchitecture=MSIL">
-      <HintPath>..\packages\Innofactor.Xrm.DevUtils.Common.9.0.1804.11\lib\net452\Cinteros.Crm.Utils.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Cinteros.Crm.Utils.Misc, Version=9.0.1804.11, Culture=neutral, PublicKeyToken=0b6cd78ab2e51f2b, processorArchitecture=MSIL">
-      <HintPath>..\packages\Innofactor.Xrm.DevUtils.Common.9.0.1804.11\lib\net452\Cinteros.Crm.Utils.Misc.dll</HintPath>
-    </Reference>
-    <Reference Include="Confuser.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5fbc98a9d8494c64, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ConfuserEx.Final.1.0.0\tools\Confuser.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Confuser.DynCipher">
-      <HintPath>..\packages\ConfuserEx.Final.1.0.0\tools\Confuser.DynCipher.dll</HintPath>
-    </Reference>
-    <Reference Include="Confuser.Protections">
-      <HintPath>..\packages\ConfuserEx.Final.1.0.0\tools\Confuser.Protections.dll</HintPath>
-    </Reference>
-    <Reference Include="Confuser.Renamer">
-      <HintPath>..\packages\ConfuserEx.Final.1.0.0\tools\Confuser.Renamer.dll</HintPath>
-    </Reference>
-    <Reference Include="Confuser.Runtime">
-      <HintPath>..\packages\ConfuserEx.Final.1.0.0\tools\Confuser.Runtime.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Crm.Sdk.Proxy, Version=9.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.4\lib\net452\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.IdentityModel, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.IdentityModel.6.1.7600.16394\lib\net35\Microsoft.IdentityModel.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.IdentityModel.Clients.ActiveDirectory, Version=2.22.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.IdentityModel.Clients.ActiveDirectory.2.22.302111727\lib\net45\Microsoft.IdentityModel.Clients.ActiveDirectory.dll</HintPath>
@@ -95,7 +67,6 @@
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.PowerShell.5.ReferenceAssemblies.1.1.0\lib\net4\System.Management.Automation.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -107,45 +78,21 @@
     <Reference Include="System.Workflow.ComponentModel" />
     <Reference Include="System.Workflow.Runtime" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cmdlets\UpdateCrmAssembly.cs" />
+    <Compile Include="..\XrmCmdletBase.cs">
+      <Link>XrmCmdletBase.cs</Link>
+    </Compile>
+    <Compile Include="FindCrmUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Cmdlets\ExportCrmShuffle.cs" />
-    <Compile Include="Cmdlets\ImportCrmShuffle.cs" />
-    <Compile Include="Cmdlets\Vendor\SolutionComponentType.cs" />
-    <Compile Include="Cmdlets\UpdateCrmResouces.cs" />
-    <Compile Include="Cmdlets\Vendor\WebResourceManager.cs" />
-    <Compile Include="Cmdlets\Structure\XrmCommandBase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Shuffle\Innofactor.Crm.Shuffle.csproj">
-      <Project>{c381e1b6-63d1-4f5f-9d9b-b275f3cc6687}</Project>
-      <Name>Innofactor.Crm.Shuffle</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
