--- a/Cmdlets/FindCrmUser/Innofactor.Crm.CI.FindCrmUser.csproj
+++ b/Cmdlets/FindCrmUser/Innofactor.Crm.CI.FindCrmUser.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{37B302D4-5C3B-4B80-BBE7-42D044BDAED8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Innofactor.Crm.CI.FindCrmUser</RootNamespace>
-    <AssemblyName>Innofactor.Crm.CI.FindCrmUser</AssemblyName>
+    <RootNamespace>Innofactor.Crm.CI.Cmdlets</RootNamespace>
+    <AssemblyName>Innofactor.Crm.CI</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
