Corrected reference path

--- a/Cmdlets/UpdateCrmResouces/Innofactor.Crm.CI.UpdateCrmResouces.csproj
+++ b/Cmdlets/UpdateCrmResouces/Innofactor.Crm.CI.UpdateCrmResouces.csproj
@@ -85,7 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\XrmCmdletBase.cs">
+    <Compile Include="..\XrmCmdletBase.cs">
       <Link>XrmCmdletBase.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
