--- a/Cmdlets/OutObfuscatedAssembly/Innofactor.Crm.CI.OutObfuscatedAssembly.csproj
+++ b/Cmdlets/OutObfuscatedAssembly/Innofactor.Crm.CI.OutObfuscatedAssembly.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Innofactor.Crm.CI.Cmdlets</RootNamespace>
-    <AssemblyName>Innofactor.Crm.CI.OutObfuscatedAssembly</AssemblyName>
+    <AssemblyName>Innofactor.Crm.CI</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -66,7 +66,4 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>copy /Y $(TargetName).dll "..\..\..\..\Extension\Implementation\ShuffleImport\ps_modules\CI\$(TargetName).dll"</PostBuildEvent>
-  </PropertyGroup>
 </Project>
