--- a/XTB/packages.config
+++ b/XTB/packages.config
@@ -1,18 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DockPanelSuite" version="3.0.4" targetFramework="net462" />
-  <package id="DockPanelSuite.ThemeVS2015" version="3.0.4" targetFramework="net462" />
+  <package id="DockPanelSuite" version="3.0.6" targetFramework="net462" />
+  <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net462" />
   <package id="ILMerge" version="2.14.1208" targetFramework="net462" />
   <package id="Innofactor.Xrm.DevUtils.Common" version="9.0.1804.11" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.4" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.4" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.4" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.4" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.9" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.9" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.9" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.27" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.0.2.26" targetFramework="net462" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.29.0" targetFramework="net462" allowedVersions="[2.29.0]" />
   <package id="Microsoft.Web.Xdt" version="2.1.2" targetFramework="net462" />
-  <package id="MscrmTools.Xrm.Connection" version="1.2018.6.17" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
+  <package id="MscrmTools.Xrm.Connection" version="1.2019.7.26" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net452" />
-  <package id="XrmToolBoxPackage" version="1.2018.6.25" targetFramework="net462" />
+  <package id="XrmToolBoxPackage" version="1.2019.7.34" targetFramework="net462" />
 </packages>
