--- a/Shuffle/packages.config
+++ b/Shuffle/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Innofactor.Xrm.DevUtils.Common" version="9.0.1804.11" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.4" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.4" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.4" targetFramework="net462" />
@@ -9,4 +8,5 @@
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net462" allowedVersions="[2.22.302111727]" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="Unofficial.Ionic.Zip" version="1.9.1.8" targetFramework="net452" />
+  <package id="Xrm.Utils.Common" version="1.0.25" targetFramework="net462" />
 </packages>
