--- a/Shuffle/packages.config
+++ b/Shuffle/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.4" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.4" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.4" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.21" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.21" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.21" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.4" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net462" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net462" allowedVersions="[2.22.302111727]" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net462" allowedVersions="[3.19.8]" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="Unofficial.Ionic.Zip" version="1.9.1.8" targetFramework="net452" />
 </packages>
