Revert "The most significant changes in the code involve the removal of several dependencies from the project, including "gulp-msbuild" and others like "balanced-match", "brace-expansion", and "lodash.template". Specific versions of packages such as `uuid`, `vinyl`, and `xtend` were also removed due to deprecation, dependency issues, and compatibility problems respectively. Additionally, the `Patch` version in the `task.json` file has been updated."
This reverts commit 7029fd8e11c54989a919dab7c6f241eaa327c2e9.

--- a/Extension/Implementation/MinifyJS/package.json
+++ b/Extension/Implementation/MinifyJS/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^5.0.0",
     "gulp-cli": "^3.0.0",
+    "gulp-msbuild": "^0.10.0",
     "gulp-rename": "^2.0.0",
     "gulp-strip-debug": "^6.0.0",
     "gulp-terser": "^2.1.0",
